--- a/handout_templates/handout_template/handout.org
+++ b/handout_templates/handout_template/handout.org
@@ -7,17 +7,18 @@
 
 
 * 序論
-旅行計画の共有ツールとして、Googleマイマップ[1]を利用するケースが増えている。
-Googleマイマップは「自分の地図を作成し共有することができる」[1]というニーズに応えるために開発された背景がある。
-しかし、Googleマイマップを旅行のプランニング用途で使用する場合、以下のような課題が存在する。
-1. スポットを日程ごとに分けて管理する機能が標準では備わっておらず、旅行日ごとの予定が視覚的に把握しづらい。
-2. 登録したスポットの訪問順序が地図上で明確に表示されないため、移動の流れが分かりにくい。
-結果として、地図上の情報が整理されず、家族や友人など旅行メンバーとの共有時に混乱が生じ、最終的に地図が活用されなくなるケースもある。
-そこで、旅行先の情報を日程や訪問順に沿って視覚的に整理し、家族や友人との円滑な情報共有を促進する旅行プランニングアプリの開発を目指す。
+旅行計画の共有ツールとして,Googleマイマップ[1]を利用するケースが増えている.
+Googleマイマップは「自分の地図を作成し共有することができる」[1]というニーズに応えるために開発された背景がある.
+しかし,Googleマイマップを旅行のプランニング用途で使用する場合,以下のような課題が存在する.
+1. 観光場所を日程ごとに分けて管理する機能が標準では備わっておらず,旅行日ごとの予定が視覚的に把握しづらい.
+2. 登録したスポットの訪問順序が地図上で明確に表示されないため,移動の流れが分かりにくい.
+結果として,訪問予定の観光地の情報が複数の地図やファイルに分かれてしまい, 全体の予定を整理しづらくなるだけでなく,
+家族や友人など旅行メンバーとの共有時に混乱が生じることがあった.
+そこで,旅行先の情報を日程や訪問順に沿って視覚的に整理し,家族や友人との円滑な情報共有を促進する旅行プランニングアプリの開発を目指す.
 
 
 
-#+CAPTION: Googleマイマッツプでスケジュールを組んだ時の画面
+#+CAPTION: Googleマイマップでスケジュールを組んだ時の画面.
 #+name: discord_demerit
 #+attr_latex: :width 7cm
 file:./figs/discord.jpg
@@ -25,22 +26,21 @@ file:./figs/discord.jpg
 
 * 開発手法
 開発環境としてDjango[2]を選定した.
-Djangoの利点は以下の2つである。[3]
+Djangoの利点は以下の2つである.[3]
 1. 迅速な開発が可能.
 2. フォーム作成が容易にできる. 
-また開発はpythonを用いて開発を行った。
-
-
-
+また開発はPython, HTML, JavaScript, CSSを使用し、UIライブラリとしてはBootstrapをを用いて開発を行った.
 
 
 * 結果
-今回開発したWebアプリには、以下のような利点がある。
-1. 旅行日数を入力することで、各日程の項目が自動生成されるため、日付ごとの旅行プランニングが容易になる。
-2. 訪問順に番号が付与されることで、旅程の流れを地図上で視覚的に把握しやすくなる。
-Googleマイマッツプでは、日数分のファイルを個別に作成・管理する必要があり、情報が分散してしまうことで視認性や共有性
-に課題があった。これに対し、本アプリでは旅行日程を事前に入力することで、各日程の構成が自動的に整理され、
-旅行計画の一元管理と視覚的な理解が可能となる。
+今回開発したWebアプリには,以下のような利点がある.
+1. 旅行日数を入力することで,各日程の項目が自動生成されるため,日付ごとの旅行プランニングが容易になる.
+2. 訪問順に番号が付与されることで,旅程の流れを地図上で視覚的に把握しやすくなる.
+Googleマイマップでは、旅行日ごとに個別のレイヤーを作成・管理する必要があるため, 観光地や移動ルートなどの情報が複数の地図に分かれてしまい,
+全体の予定を一目で把握しづらくなる. また,地図が複数に分かれていることで,旅行メンバーとの情報共有にも手間がかかり,
+混乱が生じやすいという課題があった.
+これに対し,本アプリでは旅行日程を事前に入力することで,各日程の構成が自動的に整理され,
+旅行計画の一元管理と視覚的な理解が可能となる.
 
 #+CAPTION: 参照したい日付に保存されたデータを参照する一連の動作.
 #+name: groups_calendar
@@ -60,8 +60,8 @@ file:./figs/app_motion.png
 \small\setlength\baselineskip{10pt}
 \begin{thebibliography}{9}
 
-\bibitem{Google My Maps} Google マイマップ,https://www.google.co.jp/intl/ja/maps/about/mymaps/.
-\bibitem{Django}Djangoドキュメント,https://docs.djangoproject.com/ja/5.1/topics/
-\bibitem{Django}Djangoの概要 ,https://docs.djangoproject.com/ja/5.1/intro/overview/.
+\bibitem{Google My Maps} Google マイマップ,\url{https://www.google.co.jp/intl/ja/maps/about/mymaps/}.
+\bibitem{Django}Djangoドキュメント,\url{https://docs.djangoproject.com/ja/5.1/topics/}.
+\bibitem{Django}Djangoの概要 ,\url{https://docs.djangoproject.com/ja/5.1/intro/overview/}.
 \end{thebibliography}
 
