--- a/handout_templates/handout_template/handout.org
+++ b/handout_templates/handout_template/handout.org
@@ -9,7 +9,7 @@
 * 序論
 旅行計画の共有ツールとして,Googleマイマップ[1]を利用するケースが多くみられる.
 Googleマイマップは「自分の地図を作成し共有することができる」[1]というニーズに応えるために開発された背景がある.
-しかし,旅行の計画用途で使用する場合,以下のような課題が存在する.
+しかし,旅行のプランニング用途で使用する場合,以下のような課題が存在する.
 1. 観光場所を日程ごとに分けて管理する機能が標準では備わっておらず,旅行日ごとの予定が視覚的に把握しづらい[図1].
 2. 作成した地図をタイトルから直接検索する機能がなく,過去の旅行記録を探す際に手間がかかる.
 3. 旅行に必要な持ち物を整理・確認するためのチェックリスト機能がなく,準備漏れや共有の手間が発生しやすい.
@@ -35,12 +35,11 @@ Djangoの利点は以下の2つである.[3]
 今回開発したWebアプリは,以下のような動作を行う.
 
 1. 旅行日数を入力すると,各日付に対応した日程項目が自動生成されるため,日ごとの旅行プランを簡単に立てることができる.
-2. 登録された旅行期間に基づき,「完了した旅行」「旅行中」「予定の旅行」「期間未設定」のいずれに該当するかを判定し,
-色分けして表示することで,旅行の状態を視覚的に把握しやすくする[図2].
+2. 登録された旅行期間に基づき,「完了した旅行」「旅行中」「予定の旅行」「期間未設定」のいずれに該当するかを判定し,色分けして表示することで,旅行の状態を視覚的に把握しやすくする[図2].
 3.  旅行名や説明文に含まれるキーワードで検索できるため,目的の旅行をすばやく見つけることができる.
 これにより,旅行計画の一元管理と視覚的な理解が可能となる.
 
-#+CAPTION: 旅行日程に基づくステータス判定と色分けによる視覚的管理.
+#+CAPTION: 旅行日程に基づくステータス判定と色分けによる視覚的管理を行ったときの画面.
 #+name: groups_calendar
 #+attr_latex: :width 10cm
 file:./figs/trip1.png
