--- a/handout_templates/handout_template/handout.org
+++ b/handout_templates/handout_template/handout.org
@@ -17,7 +17,7 @@
 そこで本研究では,時系列での視覚的把握を可能にするとともに,過去の旅行記録に対してキーワードによる検索・絞り込みが可能な履歴管理機能を統合した旅行プランニングアプリの開発を目指す.
 
 
-#+CAPTION: Googleマイマップでスケジュールを組んだ時の画面.
+#+CAPTION: 旅しおでスケジュールを組んだ時の画面.
 #+name: discord_demerit
 #+attr_latex: :width 7cm
 file:./figs/rireki1.png
