--- a/handout_templates/handout_template/handout.org
+++ b/handout_templates/handout_template/handout.org
@@ -1,6 +1,6 @@
 #+TITLE: 旅行計画アプリの開発
 #+ID: 37022463
-#+AUTHOR: 山本果音
+#+AUTHOR: 西谷研究室　山本果音
 #+LANGUAGE: jp
 #+OPTIONS: ^:{}
 #+LATEX_HEADER:\renewcommand{\bibname}
@@ -10,14 +10,14 @@
 修学旅行などにおいて,参加者に対して事前に配布されるしおりは,旅程の把握や所持品の確認,集合時間の共有などを目的とした重要な情報媒体である.
 近年では,紙媒体に代わりスマートフォンなどを用いて旅行情報を閲覧・共有するニーズが高まっており,これに応える形で旅しお[1]などのWebサービスが登場している.
 しかし,旅行のプランニング用途で使用する場合,以下のような課題が存在する.
-1. 時系列表示ができないため,図1に示した通り旅行日ごとの予定が視覚的に把握しづらい.
-2. 作成した地図をタイトルから直接検索する機能がなく,過去の旅行記録を探す際に不便が生じる.
-3. 地図が表示されないため,目的地が理解しにくい.
-結果として,利用者は外部ツールや手作業によって不足機能を補う必要があり、利便性や効率性に課題が残る.
-そこで本研究では,時系列での視覚的把握を可能にするとともに,過去の旅行記録に対してキーワードによる検索・絞り込みが可能な履歴管理機能を統合した旅行プランニングアプリの開発を目指す.
+1. 図1のとおり,履歴には作成日・更新日が表示される一方で,旅行日程が時系列で整理されておらず,旅行の実施状況が視覚的に困難である.
+2. 作成した地図をタイトルから直接検索する機能がなく,過去の旅行記録を振り替える際にスクロールをして探す不便が生じる.
+3. 地図が表示されないため,目的地が視覚的に理解しにくい.
+結果として,利用者は外部ツールや手作業によって不足機能を補う必要があり,利便性や効率性に課題が残る.
+そこで本研究では,時系列での視覚的把握を可能にするとともに,旅行記録に対してキーワードによる検索・絞り込みが可能な履歴管理機能を統合した旅行プランニングアプリの開発を目指す.
 
 
-#+CAPTION: 旅しおでスケジュールを組んだ時の画面.
+#+CAPTION: 旅しおで作成したしおりの履歴表示画面.
 #+name: discord_demerit
 #+attr_latex: :width 7cm
 file:./figs/rireki1.png
