--- a/handout_templates/handout_template/handout.tex
+++ b/handout_templates/handout_template/handout.tex
@@ -14,35 +14,35 @@
   \begin{document}
 
   \title{旅行計画アプリの開発}
-  \author{情報科学科 \hspace{5mm} 37022463 \hspace{5mm} 山本果音}
+  \author{情報科学科 \hspace{5mm} 37022463 \hspace{5mm} 西谷研究室　山本果音}
   \date{}
 
   \maketitle
 
 
 \section{序論}
-\label{sec:org59b7a64}
+\label{sec:org1c60c1a}
 修学旅行などにおいて,参加者に対して事前に配布されるしおりは,旅程の把握や所持品の確認,集合時間の共有などを目的とした重要な情報媒体である.
 近年では,紙媒体に代わりスマートフォンなどを用いて旅行情報を閲覧・共有するニーズが高まっており,これに応える形で旅しお[1]などのWebサービスが登場している.
 しかし,旅行のプランニング用途で使用する場合,以下のような課題が存在する.
 \begin{enumerate}
-\item 時系列表示ができないため,図1に示した通り旅行日ごとの予定が視覚的に把握しづらい.
-\item 作成した地図をタイトルから直接検索する機能がなく,過去の旅行記録を探す際に不便が生じる.
-\item 地図が表示されないため,目的地が理解しにくい.
+\item 図1のとおり,履歴には作成日・更新日が表示される一方で,旅行日程が時系列で整理されておらず,旅行の実施状況が視覚的に困難である.
+\item 作成した地図をタイトルから直接検索する機能がなく,過去の旅行記録を振り替える際にスクロールをして探す不便が生じる.
+\item 地図が表示されないため,目的地が視覚的に理解しにくい.
 \end{enumerate}
-結果として,利用者は外部ツールや手作業によって不足機能を補う必要があり、利便性や効率性に課題が残る.
-そこで本研究では,時系列での視覚的把握を可能にするとともに,過去の旅行記録に対してキーワードによる検索・絞り込みが可能な履歴管理機能を統合した旅行プランニングアプリの開発を目指す.
+結果として,利用者は外部ツールや手作業によって不足機能を補う必要があり,利便性や効率性に課題が残る.
+そこで本研究では,時系列での視覚的把握を可能にするとともに,旅行記録に対してキーワードによる検索・絞り込みが可能な履歴管理機能を統合した旅行プランニングアプリの開発を目指す.
 
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=7cm]{./figs/rireki1.png}
-\caption{\label{fig:orge864363}Googleマイマップでスケジュールを組んだ時の画面.}
+\caption{\label{fig:orgf0549a5}旅しおで作成したしおりの履歴表示画面.}
 \end{figure}
 
 
 \section{開発手法}
-\label{sec:orga20ecd7}
+\label{sec:org604f3b5}
 開発環境としてDjango[2]を選定した.
 Djangoの利点は以下の2つである[3].
 \begin{enumerate}
@@ -53,7 +53,7 @@ Djangoの利点は以下の2つである[3].
 
 
 \section{結果}
-\label{sec:org4d5127e}
+\label{sec:org56d57ea}
 今回開発したWebアプリは,以下のような動作を行う.
 
 \begin{enumerate}
@@ -66,12 +66,12 @@ Djangoの利点は以下の2つである[3].
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=10cm]{./figs/trip1.png}
-\caption{\label{fig:orgfd927ef}旅行日付に基づく時系列判定と色分けによる視覚的管理を行ったときの画面.}
+\caption{\label{fig:orge3687c8}旅行日付に基づく時系列判定と色分けによる視覚的管理を行ったときの画面.}
 \end{figure}
 
 
 \section{今後の課題}
-\label{sec:orgf8ab5b0}
+\label{sec:org4842f37}
 今回は,旅行日数に応じた日程項目の自動生成,旅行日程に基づく色分け表示,キーワード検索機能を開発した.
 今後は,更なるユーザビリティの向上のため,旅行準備の漏れを防ぐための持ち物チェックリスト機能や,日程に応じて柔軟に観光訪問順を変更できる入れ替え機能の開発を予定している.
 これにより,旅行計画の精度向上を図る.
