--- a/handout_templates/handout_template/handout.tex
+++ b/handout_templates/handout_template/handout.tex
@@ -21,12 +21,12 @@
 
 
 \section{序論}
-\label{sec:org1c60c1a}
+\label{sec:org4504981}
 修学旅行などにおいて,参加者に対して事前に配布されるしおりは,旅程の把握や所持品の確認,集合時間の共有などを目的とした重要な情報媒体である.
 近年では,紙媒体に代わりスマートフォンなどを用いて旅行情報を閲覧・共有するニーズが高まっており,これに応える形で旅しお[1]などのWebサービスが登場している.
 しかし,旅行のプランニング用途で使用する場合,以下のような課題が存在する.
 \begin{enumerate}
-\item 図1のとおり,履歴には作成日・更新日が表示される一方で,旅行日程が時系列で整理されておらず,旅行の実施状況が視覚的に困難である.
+\item 図1のとおり,履歴には作成日・更新日が表示される一方で,旅行日付が時系列で整理されておらず,旅行の実施状況が視覚的に困難である.
 \item 作成した地図をタイトルから直接検索する機能がなく,過去の旅行記録を振り替える際にスクロールをして探す不便が生じる.
 \item 地図が表示されないため,目的地が視覚的に理解しにくい.
 \end{enumerate}
@@ -37,12 +37,12 @@
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=7cm]{./figs/rireki1.png}
-\caption{\label{fig:orgf0549a5}旅しおで作成したしおりの履歴表示画面.}
+\caption{\label{fig:orga691f26}旅しおで作成したしおりの履歴表示画面.}
 \end{figure}
 
 
 \section{開発手法}
-\label{sec:org604f3b5}
+\label{sec:org4adc54e}
 開発環境としてDjango[2]を選定した.
 Djangoの利点は以下の2つである[3].
 \begin{enumerate}
@@ -53,28 +53,29 @@ Djangoの利点は以下の2つである[3].
 
 
 \section{結果}
-\label{sec:org56d57ea}
+\label{sec:orgba49f9d}
 今回開発したWebアプリは,以下のような動作を行う.
 
 \begin{enumerate}
-\item 旅行日数を入力すると,各日付に対応した日程項目が自動生成されるため,日ごとの旅行プランを簡単に立てることができる.
 \item 登録された旅行期間に基づき,図2のとおり「完了した旅行」「旅行中」「予定の旅行」「期間未設定」のいずれに該当するかを判定し,色分けして表示することで,旅行の状態を視覚的に把握しやすくする.
-\item 旅行名や説明文に含まれるキーワードで検索できるため,目的の旅行をすばやく見つけることができる.
+\item 旅行名や説明文に含まれるキーワードで検索が可能であり,目的の旅行をすばやく見つけることができる.
 \end{enumerate}
-これにより,旅行計画の一元管理と視覚的な理解が可能となる.
+これにより,過去の履歴と今後の予定を視覚的に整理することができるため,ユーザーが「どこに行ったか」「次にどこへ行くか」を一目で認識できるようになった.
+また,ユーザーの記憶が曖昧な場合でも関連するキーワードから目的の旅行を容易に特定することが可能となり,再訪計画にも活用が可能になった.
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=10cm]{./figs/trip1.png}
-\caption{\label{fig:orge3687c8}旅行日付に基づく時系列判定と色分けによる視覚的管理を行ったときの画面.}
+\caption{\label{fig:org0a61b6d}旅行日付に基づく時系列判定と色分けによる視覚的管理を行ったときの画面.}
 \end{figure}
 
 
 \section{今後の課題}
-\label{sec:org4842f37}
-今回は,旅行日数に応じた日程項目の自動生成,旅行日程に基づく色分け表示,キーワード検索機能を開発した.
-今後は,更なるユーザビリティの向上のため,旅行準備の漏れを防ぐための持ち物チェックリスト機能や,日程に応じて柔軟に観光訪問順を変更できる入れ替え機能の開発を予定している.
-これにより,旅行計画の精度向上を図る.
+\label{sec:org8c782e5}
+今回は,旅行日付に基づく色分け表示,キーワード検索機能を開発した.
+今後は,旅行先の地理的な位置関係を視覚的に把握できるようにする地図の表示,旅行準備の漏れを防ぐための所持品チェックリスト機能や,日程に応じて柔軟に観光訪問順を変更できる入れ替え機能の開発を予定している.
+これにより,地理情報・所持品の準備・当日の柔軟性といった複数の観点から旅行準備計画を支援することで,ユーザーの意図に沿った旅行体験が可能となる.
+
 
 
 \small\setlength\baselineskip{10pt}
