--- a/handout_templates/handout_template/handout.org
+++ b/handout_templates/handout_template/handout.org
@@ -11,7 +11,7 @@
 近年では,紙媒体に代わりスマートフォンなどを用いて旅行情報を閲覧・共有するニーズが高まっており,これに応える形で旅しお[1]などのWebサービスが登場している.
 しかし,旅行のプランニング用途で使用する場合,以下のような課題が存在する.
 1. 図1のとおり,履歴には作成日・更新日が表示される一方で,旅行日付が時系列で整理されておらず,旅行の実施状況が視覚的に困難である.
-2. 作成した地図をタイトルから直接検索する機能がなく,過去の旅行記録を振り替える際にスクロールをして探す不便が生じる.
+2. 作成済みの旅のしおりに対して旅行名や説明文のキーワードで検索する機能が存在しないため,過去の旅行記録を振り返る際に,スクロール操作によって目的のしおりを探す必要があり,利便性に欠ける.
 3. 地図が表示されないため,目的地が視覚的に理解しにくい.
 結果として,利用者は外部ツールや手作業によって不足機能を補う必要があり,利便性や効率性に課題が残る.
 そこで本研究では,時系列での視覚的把握を可能にするとともに,旅行記録に対してキーワードによる検索・絞り込みが可能な履歴管理機能を統合した旅行プランニングアプリの開発を目指す.
