--- a/handout_templates/handout_template/handout.tex
+++ b/handout_templates/handout_template/handout.tex
@@ -21,7 +21,7 @@
 
 
 \section{序論}
-\label{sec:org2d2bd50}
+\label{sec:org6b99acf}
 修学旅行などにおいて,参加者に対して事前に配布されるしおりは,旅程の把握や所持品の確認,集合時間の共有などを目的とした重要な情報媒体である.
 近年では,紙媒体に代わりスマートフォンなどを用いて旅行情報を閲覧・共有するニーズが高まっており,これに応える形で旅しお[1]などのWebサービスが登場している.
 しかし,旅行のプランニング用途で使用する場合,以下のような課題が存在する.
@@ -38,12 +38,12 @@
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=7cm]{./figs/rireki1.png}
-\caption{\label{fig:org9deea65}旅しおで作成したしおりの履歴表示画面.}
+\caption{\label{fig:org4abda21}旅しおで作成したしおりの履歴表示画面.}
 \end{figure}
 
 
 \section{開発手法}
-\label{sec:org28f2465}
+\label{sec:orge4e412a}
 開発環境としてDjango[2]を選定した.
 Djangoは、PythonベースのWebフレームワークである.
 Djangoの利点は以下の2つである[3].
@@ -56,7 +56,7 @@ Djangoの利点は以下の2つである[3].
 
 
 \section{結果}
-\label{sec:org5512ebf}
+\label{sec:orgdfbbe2d}
 今回開発したWebアプリは,以下のような動作を行う.
 
 \begin{enumerate}
@@ -69,12 +69,12 @@ Djangoの利点は以下の2つである[3].
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=10cm]{./figs/trip1.png}
-\caption{\label{fig:org484fc8a}旅行日付に基づく時系列判定と色分けによる視覚的管理を行ったときの画面.}
+\caption{\label{fig:org02cd3fb}旅行日付に基づく時系列判定と色分けによる視覚的管理を行ったときの画面.}
 \end{figure}
 
 
 \section{今後の課題}
-\label{sec:org5f7a81b}
+\label{sec:orgf534867}
 今回は,旅行日付に基づく色分け表示,キーワード検索機能を開発した.
 今後は,旅行先の地理的な位置関係を視覚的に把握できるようにする地図の表示,旅行準備の漏れを防ぐための所持品チェックリスト機能や,日程に応じて柔軟に観光訪問順を変更できる入れ替え機能の開発を予定している.
 これにより,地理情報・所持品の準備・当日の柔軟性といった複数の観点から旅行準備計画を支援することで,ユーザーの意図に沿った旅行体験が可能となる.
