--- a/handout_templates/handout_template/handout.org
+++ b/handout_templates/handout_template/handout.org
@@ -8,17 +8,16 @@
 
 * 序論
 修学旅行などにおいて,参加者に対して事前に配布されるしおりは,旅程の把握や所持品の確認,集合時間の共有などを目的とした重要な情報媒体である.
-近年では,紙媒体に代わりスマートフォンなどを用いて旅行情報を閲覧・共有するニーズが高まっており,これに応える形で旅しお[1]などのWebサービスが登場している.
-しかし,旅行のプランニング用途で使用する場合,以下のような課題が存在する.
+近年では,紙媒体に代わりスマートフォンなどを用いて旅行情報を閲覧・共有するニーズが高まっており,これに応える形で「旅しお」[1]などのWebサービスが登場している.
+しかし,旅行のプランニング用途で過去の履歴を参照する場合,以下のような課題が存在する.
 1. 図1のとおり,履歴には作成日・更新日が表示される一方で,旅行日付が時系列で整理されておらず,旅行の実施状況が視覚的に困難である.
 2. 作成済みの旅行準備に対して旅行名や説明文のキーワードで検索する機能が存在しないため,過去の旅行記録を振り返る際に,スクロール操作によって目的のしおりを探す必要があり,利便性に欠ける.
-3. 地図が表示されないため,目的地が視覚的に理解しにくい.
-結果として,利用者は外部ツールや手作業によって不足機能を補う必要があり,利便性や効率性に課題が残る.
-そこで本研究では,旅行の予定管理だけでなく,旅行後の記録整理にも活用できる「デジタル版しおり」として機能する旅行プランニングアプリの開発を目指す.
+さらに,地図が表示されないため,目的地が視覚的に理解しにくいため,利用者は外部ツールや手作業によって不足機能を補う必要がある.
+そこで本研究では,旅行の予定準備だけでなく,旅行後の記録整理にも活用できる「デジタル版しおり」として機能する旅行プランニングアプリの開発を目指す.
 
 
 
-#+CAPTION: 旅しおで作成したしおりの履歴表示画面.
+#+CAPTION: 「旅しお」で作成したしおりの履歴表示画面.
 #+name: discord_demerit
 #+attr_latex: :width 7cm
 file:./figs/rireki1.png
@@ -30,7 +29,7 @@ Djangoは、PythonベースのWebフレームワークである.
 Djangoの利点は以下の2つである[3].
 1. django-admin startproject コマンドにより,必要なファイルやフォルダが一式自動で作成されるため,迅速な開発が可能.
 2. Djangoが提供するModelForm機能により,フォーム作成が容易にできる.
-3. セキュリティ対策を実装しなくても,Djangoというフレームワーク自体が標準で安全性を確保する仕組みを備えているため安全である. 
+3. セキュリティ対策を実装しなくても,フレームワーク自体が標準で安全性を確保する仕組みを備えている. 
 また開発はPython, HTML, JavaScript, CSSを使用し、UIライブラリとしてはBootstrapを用いて開発を行った.
 
 
@@ -49,9 +48,9 @@ file:./figs/trip1.png
 
 
 * 今後の課題
-今回は,旅行日付に基づく色分け表示,キーワード検索機能を開発した.
-今後は,旅行先の地理的な位置関係を視覚的に把握できるようにする地図の表示,旅行準備の漏れを防ぐための所持品チェックリスト機能や,日程に応じて柔軟に観光訪問順を変更できる入れ替え機能の開発を予定している.
-これにより,地理情報・所持品の準備・当日の柔軟性といった複数の観点から旅行準備計画を支援することで,ユーザーの意図に沿った旅行体験が可能となる.
+旅行日付に基づく色分け表示,キーワード検索機能を開発した.
+今後,旅行先の地理的な位置関係を視覚的に把握できるようにする地図の表示,旅行準備の漏れを防ぐための所持品チェックリスト機能や,日程に応じて柔軟に観光訪問順を変更できる入れ替え機能の開発を予定している.
+
 
 
 
