--- a/handout_templates/handout_template/handout.tex
+++ b/handout_templates/handout_template/handout.tex
@@ -18,31 +18,11 @@
   \date{}
 
   \maketitle
-<<<<<<< HEAD
-修学旅行などにおいて,参加者に対して事前に配布されるしおりは,旅程の把握や所持品の確認,集合時間の共有などを目的とした重要な情報媒体である.
-近年では,紙媒体に代わりスマートフォンなどを用いて旅行情報を閲覧・共有するニーズが高まっており,これに応える形で「旅しお」[1]などのWebサービスが登場している.
-しかし,旅行のプランニング用途で過去の履歴を参照する場合,以下のような課題が存在する.
-\begin{enumerate}
-\item 図1のとおり,履歴には作成日・更新日が表示される一方で,旅行日付が時系列で整理されておらず,旅行の実施状況が視覚的に困難である.
-\item 作成済みの旅行準備に対して旅行名や説明文のキーワードで検索する機能が存在しないため,過去の旅行記録を振り返る際に,スクロール操作によって目的のしおりを探す必要があり,利便性に欠ける.
-\end{enumerate}
-さらに,地図が表示されないため,目的地が視覚的に理解しにくいため,利用者は外部ツールや手作業によって不足機能を補う必要がある.
-そこで本研究では,旅行の予定準備だけでなく,旅行後の記録整理にも活用できる「デジタル版しおり」として機能する旅行プランニングアプリの開発を目指す.
 
-
-
-\begin{figure}[htbp]
-\centering
-\includegraphics[width=7cm]{./figs/rireki1.png}
-\caption{\label{fig:org145026f}「旅しお」で作成したしおりの履歴表示画面.}
-\end{figure}
-\section{開発手法}
-\label{sec:orgdda2658}
-=======
 
 
 \section{序論}
-\label{sec:org9649b3d}
+\label{sec:org4c2be27}
 修学旅行などにおいて,参加者に対して事前に配布されるしおりは,旅程の把握や所持品の確認,集合時間の共有などを目的とした重要な情報媒体である.
 近年では,紙媒体に代わりスマートフォンなどを用いて旅行情報を閲覧・共有するニーズが高まっており,これに応える形で「旅しお」[1]などのWebサービスが登場している.
 しかし,友人・家族旅行のプランニング用途で過去の履歴を参照する場合,以下のような課題が存在する.
@@ -56,12 +36,11 @@
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=6cm]{./figs/rireki1.png}
-\caption{\label{fig:org52c9423}「旅しお」で作成したしおりの履歴表示画面.}
+\caption{\label{fig:org5550e8c}「旅しお」で作成したしおりの履歴表示画面.}
 \end{figure}
 
 \section{開発手法}
-\label{sec:org3064364}
->>>>>>> 7311fca (handout_0912)
+\label{sec:org43e557c}
 開発環境としてDjango[2]を選定した.
 Djangoは,PythonベースのWebフレームワークである.
 Djangoの利点は以下の2つである[3].
@@ -71,14 +50,9 @@ Djangoの利点は以下の2つである[3].
 \item セキュリティ対策を実装しなくても,フレームワーク自体が標準で安全性を確保する仕組みを備えている.
 \end{enumerate}
 また開発はPython, HTML, JavaScript, CSSを使用し、UIライブラリとしてはBootstrapを用いて開発を行った.
-<<<<<<< HEAD
-\section{結果}
-\label{sec:orgc5c9d0a}
-=======
 
 \section{結果}
-\label{sec:org49e636e}
->>>>>>> 7311fca (handout_0912)
+\label{sec:org8ed5a01}
 今回開発したWebアプリは,以下のような動作を行う.
 
 \begin{enumerate}
@@ -90,20 +64,13 @@ Djangoの利点は以下の2つである[3].
 
 \begin{figure}[htbp]
 \centering
-<<<<<<< HEAD
-\includegraphics[width=8cm]{./figs/trip1.png}
-\caption{\label{fig:orgd4e64f4}旅行日付に基づく時系列判定と色分けによる視覚的管理を行ったときの画面.}
-\end{figure}
-\section{今後の課題}
-\label{sec:org579cd9d}
-=======
 \includegraphics[width=7cm]{./figs/trip1.png}
-\caption{\label{fig:org1f5fef7}旅行日付に基づく時系列判定と色分けによる視覚的管理を行ったときの画面.}
+\caption{\label{fig:org99798db}旅行日付に基づく時系列判定と色分けによる視覚的管理を行ったときの画面.}
 \end{figure}
 
+
 \section{今後の課題}
-\label{sec:org838ff3e}
->>>>>>> 7311fca (handout_0912)
+\label{sec:org387b0d9}
 旅行日付に基づく色分け表示,キーワード検索機能を開発した.
 今後,旅行先の地理的な位置関係を視覚的に把握できるようにする地図の表示,旅行準備の漏れを防ぐための所持品チェックリスト機能や,日程に応じて柔軟に観光訪問順を変更できる入れ替え機能の開発を予定している.
 
@@ -114,7 +81,7 @@ Djangoの利点は以下の2つである[3].
 \begin{thebibliography}{9}
 
 \bibitem{旅しお} 旅しお,\url{https://tabisio.com/},(2025/09/05 accessed).
-\bibitem{Django}Djangoドキュメント,\url{https://docs.djangoproject.com/ja/5.1/topics/},(2025/09/05 accessed).
-\bibitem{Django}Django,\url{https://www.djangoproject.com/},(2025/09/05 accessed).
+\bibitem{Django-doc}Djangoドキュメント,\url{https://docs.djangoproject.com/ja/5.1/topics/},(2025/09/05 accessed).
+\bibitem{Django-site}Django,\url{https://www.djangoproject.com/},(2025/09/05 accessed).
 \end{thebibliography}
 \end{document}
