--- a/handout_templates/handout_template/handout.org
+++ b/handout_templates/handout_template/handout.org
@@ -24,9 +24,9 @@ file:./figs/rireki1.png
 * 開発手法
 開発環境としてDjango[2]を選定した.
 Djangoは,PythonベースのWebフレームワークである.
-Djangoの利点は以下の2つである[3].
-1. django-admin startproject コマンドにより,必要なファイルやフォルダが一式自動で作成されるため,迅速な開発が可能.
-2. Djangoが提供するModelForm機能により,フォーム作成が容易にできる.
+Djangoの利点は以下の3つである[3].
+1. 認証,管理画面,データベース操作などが最初から組み込まれているため,追加設定なしで迅速な開発が可能.
+2. データベースの設計変更やマイグレーションを含む複雑なデータベース操作も,全てPythonで記述できるため学習コストが低い.
 3. セキュリティ対策を実装しなくても,フレームワーク自体が標準で安全性を確保する仕組みを備えている. 
 また開発はPython, HTML, JavaScript, CSSを使用し、UIライブラリとしてはBootstrapを用いて開発を行った.
 
