--- a/midterm_handout/handout.tex
+++ b/midterm_handout/handout.tex
@@ -24,7 +24,7 @@
 
 
 \section{序論}
-\label{sec:org36e58f0}
+\label{sec:org4e91291}
 修学旅行などにおいて,参加者に対して事前に配布されるしおりは,旅程の把握や所持品の確認,集合時間の共有などを目的とした重要な情報媒体である.
 近年では,紙媒体に代わりスマートフォンなどを用いて旅行情報を閲覧・共有するニーズが高まっており,これに応える形で「旅しお」[1]などのWebサービスが登場している.
 しかし,友人・家族旅行のプランニング用途で過去の履歴を参照する場合,以下のような課題が存在する.
@@ -37,12 +37,12 @@
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=6cm]{./figs/rireki1.png}
-\caption{\label{fig:org2e8434d}「旅しお」で作成したしおりの履歴表示画面.}
+\includegraphics[width=6cm]{./figs/shiori2.png}
+\caption{\label{fig:org72aa08b}「旅しお」で作成したしおりの履歴表示画面.}
 \end{figure}
 
 \section{開発手法}
-\label{sec:org268d78b}
+\label{sec:org1a9cba3}
 開発環境としてDjangoを選定した.
 Djangoは,PythonベースのWebフレームワークである.
 Djangoの利点は以下の3つである[2].
@@ -54,7 +54,7 @@ Djangoの利点は以下の3つである[2].
 また開発はCopilot[3]を参照しながら,Python, HTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrapを用いた.
 
 \section{結果}
-\label{sec:orgbf51101}
+\label{sec:org5be8d8c}
 今回開発したWebアプリは,以下のような動作を行う.
 
 \begin{enumerate}
@@ -67,12 +67,12 @@ Djangoの利点は以下の3つである[2].
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=6cm]{./figs/trip1.png}
-\caption{\label{fig:org5a6a668}旅行日付に基づく時系列判定と色分けによる視覚的管理を行ったときの画面.}
+\caption{\label{fig:org0fa2c20}旅行日付に基づく時系列判定と色分けによる視覚的管理を行ったときの画面.}
 \end{figure}
 
 
 \section{今後の課題}
-\label{sec:org6a446a1}
+\label{sec:orgb46e780}
 旅行日付に基づく色分け表示,キーワード検索機能を開発した.
 今後,旅行先の地理的な位置関係を視覚的に把握できるようにする地図の表示,旅行準備の漏れを防ぐための所持品チェックリスト機能や,日程に応じて柔軟に観光訪問順を変更できる入れ替え機能の開発を予定している.
 
