--- a/thesis/body/body.org
+++ b/thesis/body/body.org
@@ -43,7 +43,6 @@
 
 *** Heroku
 * 結果と考察
-あああ
 ** アプリ機能
 今回，開発したアプリでは大きく分けて4つの機能を実装した．
 それぞれの機能は図3.1の通りである．
@@ -86,21 +85,33 @@
 検索機能であり,旅行一覧画面に多くの旅行が表示されている場合,目的の旅行を探し出すのに時間がかかる.
 そこで,旅行名や説明欄に含まれる単語をもとに,部分一致によるキーワード検索を行い,該当するデータを絞り込めるようにする.
 タイトルの語句をキーとして検索するキーワード検索に分けて検索機能を実装した．
+ #+CAPTION: 旅行一覧検索画面.
+ #+attr_latex: :width 8cm
+ file:./fig/search.png
 
 さらに,施設名を入力するだけで,対応する位置に地図上のピンを自動で立てられる機能を導入した.
 これにより,ユーザーは住所を調べて緯度経度を入力する手間なく,直感的に観光地を登録できるようになった.
+ #+CAPTION: 施設名の入力画面.
+ #+attr_latex: :width 12cm
+ file:./fig/search_place.png
 
 
 *** チェックリスト機能
 旅行準備を効率的に進められるよう,チェックリストに関する複数の機能を実装した.
-まず,各旅行ごとに持ち物や準備項目を自由に編集できるチェックリスト編集機能を導入した.
-これにより,ユーザーは旅行の目的や同行者に応じて,必要な項目を柔軟に追加・削除することが可能となった.
-
-また,チェック状態の保存機能を実装し,ユーザーが確認済みの項目を記録できるようにした.
-これにより,準備の進捗状況を可視化しながら,漏れなく持ち物を確認できるようになった.
-
-さらに,旅行ごとに標準のチェックリスト設定を適用できる機能を導入した.
+まず,旅行ごとに標準のチェックリスト設定を適用できる機能を導入した.
 これにより,ユーザーは毎回ゼロからリストを作成する必要がなく,あらかじめ用意された基本項目をもとに効率よく準備を開始できるようになった.
+ #+CAPTION: チェックリスト設定画面.
+ #+attr_latex: :width 12cm
+ file:./fig/checklist_setting.png
+
+また,各旅行ごとに持ち物や準備項目を自由に編集できるチェックリスト編集機能を導入した.
+これにより,ユーザーは旅行の目的や同行者に応じて,必要な項目を柔軟に追加・削除することが可能となった.
+ #+CAPTION: チェックリスト追加画面.
+ #+attr_latex: :width 10cm
+ file:./fig/add_checklist.png
+
+さらに,チェック状態の保存機能を実装し,ユーザーが確認済みの項目を記録できるようにした.
+これにより,準備の進捗状況を可視化しながら,漏れなく持ち物を確認できるようになった.
 
 これらの機能は,旅行前の準備を支援する上で重要な役割を果たしており,ユーザーが安心して出発できるよう,
 実用性と柔軟性を兼ね備えたチェックリスト管理環境を提供している.
