--- a/thesis/body/body.tex
+++ b/thesis/body/body.tex
@@ -1,4 +1,6 @@
-\label{sec:org4091684}
+
+\chapter{序論}
+\label{sec:org8bc15c3}
 修学旅行などのイベントでは,参加者に対して事前にしおりが配布されることが多い.
 しおりは旅程の把握や所持品の確認,集合時間の共有などを目的とした重要な情報媒体であり,
 旅行の準備や当日の行動において欠かせない役割を果たしている.
@@ -15,15 +17,17 @@
 
 これらの課題は,旅行計画の際にユーザーにとって大きな障壁となっており,情報の整理や視覚的な理解の低下が考えられる.
 そこで本研究では,視覚的な理解と旅行後の振り返りを行える「デジタル版しおり」として機能する旅行アプリの開発を目指す.
+
 \chapter{手法}
-\label{sec:orge629022}
+\label{sec:org25ed0be}
 \section{開発手法}
-\label{sec:orgabb0f23}
+\label{sec:org7a8da1b}
 本研究では, 限られた開発期間の中で, 機能単位に計画・設計・実装・テストを小刻みに繰り返す手法を採用した.
 各段階で得られた知見や, 研究室内のメンバーからのフィードバックをもとに, 仕様やUIの見直しを行いながら, 柔軟に改善を重ねた.
 これにより, 利用者の視点を反映した機能の追加や調整が可能となり, アプリケーションの完成度と実用性を段階的に高めることができた.
+
 \subsection{Dango}
-\label{sec:org682db2c}
+\label{sec:orgb805b41}
 開発環境として,Pythonで実装されたサーバーサイドWebアプリケーションフレームワークであるDjangoを選定した[2]．Djangoを選定した理由は以下の3つである．
 
 1つ目は,ユーザー認証や管理画面,データベース操作などの機能が初期状態で組み込まれており,追加設定を行わずとも迅速に開発を開始できる点である．これにより,開発初期の環境構築にかかる手間を大幅に削減することが可能となった．
@@ -34,13 +38,13 @@
 そのため,開発者が個別にセキュリティ機能を実装する必要がなく,安全性の高いWebアプリケーションを効率的に構築することができた．
 
 また,実装にはPython, HTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrapを採用した．開発にあたってはCopilot[3]を参照しながら,開発を行った．
+
 \subsection{Heroku}
-\label{sec:org9d4519a}
+\label{sec:org0230299}
 \chapter{結果と考察}
-\label{sec:orgc092ad9}
-あああ
+\label{sec:orgd123e10}
 \section{アプリ機能}
-\label{sec:org28cc047}
+\label{sec:org4de2e3c}
 今回，開発したアプリでは大きく分けて4つの機能を実装した．
 それぞれの機能は図3.1の通りである．
 \begin{figure}[htbp]
@@ -49,7 +53,7 @@
 \caption{アプリ機能一覧.}
 \end{figure}
 \subsection{旅程の視覚化管理}
-\label{sec:org40ab7e3}
+\label{sec:org3a5ab68}
 ユーザーが旅行の全体像や日程ごとの計画を直感的に把握できるよう,複数の視覚化機能を実装した.
 
 まず,登録された旅行期間に基づいて,各旅行を「予定」「旅行中」「終了」「未定」の4つのステータスに分類し,色分けによって一覧画面上に表示する機能を実装した.
@@ -66,8 +70,9 @@
 
 これらの機能により,ユーザーは旅行の計画段階において,旅程を効率的に把握・調整できるようになり、
 直感的な旅行プランニングが可能となった.
+
 \subsection{旅程の編集・調節機能}
-\label{sec:org0ac3255}
+\label{sec:org7acfd67}
 旅行の計画を柔軟に調整できるよう,旅程編集に関する2つの機能を実装した.
 
 まず,観光場所の訪問順序を自由に入れ替える機能を導入した.
@@ -77,32 +82,57 @@
 これにより,ユーザーは移動にかかる時間を考慮しながら,現実的かつ無理のないスケジュールを立てることができるようになった.
 
 これらの機能は,旅行の編集・調節を支援する上で不可欠な要素であり,ユーザーが旅程全体の流れを把握しながら,日程ごとの詳細な計画を直感的に調整できる環境を提供している.
+
+
 \subsection{検索機能}
-\label{sec:orgb29b3c8}
+\label{sec:org7737a08}
 旅行情報の登録・閲覧・編集を効率的かつ直感的に行えるよう,2つの検索機能を実装した。
 
 検索機能であり,旅行一覧画面に多くの旅行が表示されている場合,目的の旅行を探し出すのに時間がかかる.
 そこで,旅行名や説明欄に含まれる単語をもとに,部分一致によるキーワード検索を行い,該当するデータを絞り込めるようにする.
 タイトルの語句をキーとして検索するキーワード検索に分けて検索機能を実装した．
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=8cm]{./fig/search.png}
+\caption{旅行一覧検索画面.}
+\end{figure}
 
 さらに,施設名を入力するだけで,対応する位置に地図上のピンを自動で立てられる機能を導入した.
 これにより,ユーザーは住所を調べて緯度経度を入力する手間なく,直感的に観光地を登録できるようになった.
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=12cm]{./fig/search_place.png}
+\caption{施設名の入力画面.}
+\end{figure}
+
+
 \subsection{チェックリスト機能}
-\label{sec:org3e0badb}
+\label{sec:org81ed614}
 旅行準備を効率的に進められるよう,チェックリストに関する複数の機能を実装した.
-まず,各旅行ごとに持ち物や準備項目を自由に編集できるチェックリスト編集機能を導入した.
-これにより,ユーザーは旅行の目的や同行者に応じて,必要な項目を柔軟に追加・削除することが可能となった.
-
-また,チェック状態の保存機能を実装し,ユーザーが確認済みの項目を記録できるようにした.
-これにより,準備の進捗状況を可視化しながら,漏れなく持ち物を確認できるようになった.
-
-さらに,旅行ごとに標準のチェックリスト設定を適用できる機能を導入した.
+まず,旅行ごとに標準のチェックリスト設定を適用できる機能を導入した.
 これにより,ユーザーは毎回ゼロからリストを作成する必要がなく,あらかじめ用意された基本項目をもとに効率よく準備を開始できるようになった.
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=12cm]{./fig/checklist_setting.png}
+\caption{チェックリスト設定画面.}
+\end{figure}
+
+また,各旅行ごとに持ち物や準備項目を自由に編集できるチェックリスト編集機能を導入した.
+これにより,ユーザーは旅行の目的や同行者に応じて,必要な項目を柔軟に追加・削除することが可能となった.
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=10cm]{./fig/add_checklist.png}
+\caption{チェックリスト追加画面.}
+\end{figure}
+
+さらに,チェック状態の保存機能を実装し,ユーザーが確認済みの項目を記録できるようにした.
+これにより,準備の進捗状況を可視化しながら,漏れなく持ち物を確認できるようになった.
 
 これらの機能は,旅行前の準備を支援する上で重要な役割を果たしており,ユーザーが安心して出発できるよう,
 実用性と柔軟性を兼ね備えたチェックリスト管理環境を提供している.
+
 \chapter{まとめ}
-\label{sec:orgc3fc641}
+\label{sec:org978e404}
 本研究では，Rubyで書かれたサーバー側WebアプリケーションフレームワークであるRailsを開発環境として，データを共有・見返す作業を癖付けることを目的としたグループウェアアプリ Habit man を開発した．
 
 開発手法として事前に全ての機能やサービスの詳細な要件，作業スケジュールを立てるウォーターフォール開発ではなく，
