--- a/thesis/body/body.org
+++ b/thesis/body/body.org
@@ -25,7 +25,7 @@
 
 * 手法
 ** 開発手法
-本研究では, 限られた開発期間の中で, 機能単位に計画・設計・実装・テストを小刻みに繰り返す手法を採用した.
+本研究では,限られた開発期間内で効率的に成果を上げるために,機能ごとに優先順位を設定し,それぞれについて計画・設計・実装・テストの工程を小刻みに繰り返す手法を採用した.
 各段階で得られた知見や, 研究室内のメンバーからのフィードバックをもとに, 仕様やUIの見直しを行いながら, 柔軟に改善を重ねた.
 これにより, 利用者の視点を反映した機能の追加や調整が可能となり, アプリケーションの完成度と実用性を段階的に高めることができた.
 
@@ -54,15 +54,21 @@
 
 まず,登録された旅行期間に基づいて,各旅行を「予定」「旅行中」「終了」「未定」の4つのステータスに分類し,色分けによって一覧画面上に表示する機能を実装した.
 これにより,ユーザーは「どこに行ったか」「これからどこに行くか」といった旅行の進行状況を一目で把握できるようになった.
+ #+CAPTION: 旅行一覧画面.
+ #+attr_latex: :width 15cm
+ file:./fig/travel.png
 
 また,旅行詳細画面では,Google Maps API を用いて登録された観光場所を地図上に表示する機能を導入した.
-これにより,各観光地の位置関係や移動ルートを視覚的に確認でき,旅行計画全体の空間的な構造を把握しやすくなった.
+これにより,各観光地の位置関係や移動ルートを視覚的に確認でき,旅行計画全体の構造を把握しやすくなった.
 
 さらに,旅行に含まれる観光場所を「全体」「1日目」「2日目」など日程ごとに切り替えて表示する機能を実装した.
 ユーザーはタブを操作することで,旅行全体の流れを理解しつつ,各日の予定を個別に確認・編集することが可能となった.
 
 タブの切り替えに連動して,地図上に表示される観光地もその日に対応するもののみに自動で更新されるため,
 日程ごとの旅程を視覚的に管理しやすい設計となっている.
+ #+CAPTION: 1日目のタブを押したときの画面.
+ #+attr_latex: :width 15cm
+ file:./fig/focus_on_date.png
 
 これらの機能により,ユーザーは旅行の計画段階において,旅程を効率的に把握・調整できるようになり、
 直感的な旅行プランニングが可能となった.
