--- a/thesis/body/body.tex
+++ b/thesis/body/body.tex
@@ -1,6 +1,6 @@
 
 \chapter{序論}
-\label{sec:org8bc15c3}
+\label{sec:orgc6e66d3}
 修学旅行などのイベントでは,参加者に対して事前にしおりが配布されることが多い.
 しおりは旅程の把握や所持品の確認,集合時間の共有などを目的とした重要な情報媒体であり,
 旅行の準備や当日の行動において欠かせない役割を果たしている.
@@ -19,15 +19,15 @@
 そこで本研究では,視覚的な理解と旅行後の振り返りを行える「デジタル版しおり」として機能する旅行アプリの開発を目指す.
 
 \chapter{手法}
-\label{sec:org25ed0be}
+\label{sec:org3bee0d4}
 \section{開発手法}
-\label{sec:org7a8da1b}
-本研究では, 限られた開発期間の中で, 機能単位に計画・設計・実装・テストを小刻みに繰り返す手法を採用した.
+\label{sec:org5056888}
+本研究では,限られた開発期間内で効率的に成果を上げるために,機能ごとに優先順位を設定し,それぞれについて計画・設計・実装・テストの工程を小刻みに繰り返す手法を採用した.
 各段階で得られた知見や, 研究室内のメンバーからのフィードバックをもとに, 仕様やUIの見直しを行いながら, 柔軟に改善を重ねた.
 これにより, 利用者の視点を反映した機能の追加や調整が可能となり, アプリケーションの完成度と実用性を段階的に高めることができた.
 
 \subsection{Dango}
-\label{sec:orgb805b41}
+\label{sec:org3004adb}
 開発環境として,Pythonで実装されたサーバーサイドWebアプリケーションフレームワークであるDjangoを選定した[2]．Djangoを選定した理由は以下の3つである．
 
 1つ目は,ユーザー認証や管理画面,データベース操作などの機能が初期状態で組み込まれており,追加設定を行わずとも迅速に開発を開始できる点である．これにより,開発初期の環境構築にかかる手間を大幅に削減することが可能となった．
@@ -40,11 +40,11 @@
 また,実装にはPython, HTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrapを採用した．開発にあたってはCopilot[3]を参照しながら,開発を行った．
 
 \subsection{Heroku}
-\label{sec:org0230299}
+\label{sec:orgb214742}
 \chapter{結果と考察}
-\label{sec:orgd123e10}
+\label{sec:org872216e}
 \section{アプリ機能}
-\label{sec:org4de2e3c}
+\label{sec:org42ee23f}
 今回，開発したアプリでは大きく分けて4つの機能を実装した．
 それぞれの機能は図3.1の通りである．
 \begin{figure}[htbp]
@@ -53,26 +53,36 @@
 \caption{アプリ機能一覧.}
 \end{figure}
 \subsection{旅程の視覚化管理}
-\label{sec:org3a5ab68}
+\label{sec:orga3167fe}
 ユーザーが旅行の全体像や日程ごとの計画を直感的に把握できるよう,複数の視覚化機能を実装した.
 
 まず,登録された旅行期間に基づいて,各旅行を「予定」「旅行中」「終了」「未定」の4つのステータスに分類し,色分けによって一覧画面上に表示する機能を実装した.
 これにより,ユーザーは「どこに行ったか」「これからどこに行くか」といった旅行の進行状況を一目で把握できるようになった.
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=15cm]{./fig/travel.png}
+\caption{旅行一覧画面.}
+\end{figure}
 
 また,旅行詳細画面では,Google Maps API を用いて登録された観光場所を地図上に表示する機能を導入した.
-これにより,各観光地の位置関係や移動ルートを視覚的に確認でき,旅行計画全体の空間的な構造を把握しやすくなった.
+これにより,各観光地の位置関係や移動ルートを視覚的に確認でき,旅行計画全体の構造を把握しやすくなった.
 
 さらに,旅行に含まれる観光場所を「全体」「1日目」「2日目」など日程ごとに切り替えて表示する機能を実装した.
 ユーザーはタブを操作することで,旅行全体の流れを理解しつつ,各日の予定を個別に確認・編集することが可能となった.
 
 タブの切り替えに連動して,地図上に表示される観光地もその日に対応するもののみに自動で更新されるため,
 日程ごとの旅程を視覚的に管理しやすい設計となっている.
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=15cm]{./fig/focus_on_date.png}
+\caption{1日目のタブを押したときの画面.}
+\end{figure}
 
 これらの機能により,ユーザーは旅行の計画段階において,旅程を効率的に把握・調整できるようになり、
 直感的な旅行プランニングが可能となった.
 
 \subsection{旅程の編集・調節機能}
-\label{sec:org7acfd67}
+\label{sec:orgb5849d2}
 旅行の計画を柔軟に調整できるよう,旅程編集に関する2つの機能を実装した.
 
 まず,観光場所の訪問順序を自由に入れ替える機能を導入した.
@@ -85,7 +95,7 @@
 
 
 \subsection{検索機能}
-\label{sec:org7737a08}
+\label{sec:orga966b8b}
 旅行情報の登録・閲覧・編集を効率的かつ直感的に行えるよう,2つの検索機能を実装した。
 
 検索機能であり,旅行一覧画面に多くの旅行が表示されている場合,目的の旅行を探し出すのに時間がかかる.
@@ -107,7 +117,7 @@
 
 
 \subsection{チェックリスト機能}
-\label{sec:org81ed614}
+\label{sec:org442aa06}
 旅行準備を効率的に進められるよう,チェックリストに関する複数の機能を実装した.
 まず,旅行ごとに標準のチェックリスト設定を適用できる機能を導入した.
 これにより,ユーザーは毎回ゼロからリストを作成する必要がなく,あらかじめ用意された基本項目をもとに効率よく準備を開始できるようになった.
@@ -132,7 +142,7 @@
 実用性と柔軟性を兼ね備えたチェックリスト管理環境を提供している.
 
 \chapter{まとめ}
-\label{sec:org978e404}
+\label{sec:org5706869}
 本研究では，Rubyで書かれたサーバー側WebアプリケーションフレームワークであるRailsを開発環境として，データを共有・見返す作業を癖付けることを目的としたグループウェアアプリ Habit man を開発した．
 
 開発手法として事前に全ての機能やサービスの詳細な要件，作業スケジュールを立てるウォーターフォール開発ではなく，
