--- a/thesis/body/body.tex
+++ b/thesis/body/body.tex
@@ -1,6 +1,6 @@
 
 \chapter{序論}
-\label{sec:orgc6e66d3}
+\label{sec:orgd3e54d7}
 修学旅行などのイベントでは,参加者に対して事前にしおりが配布されることが多い.
 しおりは旅程の把握や所持品の確認,集合時間の共有などを目的とした重要な情報媒体であり,
 旅行の準備や当日の行動において欠かせない役割を果たしている.
@@ -19,15 +19,15 @@
 そこで本研究では,視覚的な理解と旅行後の振り返りを行える「デジタル版しおり」として機能する旅行アプリの開発を目指す.
 
 \chapter{手法}
-\label{sec:org3bee0d4}
+\label{sec:org56983ae}
 \section{開発手法}
-\label{sec:org5056888}
-本研究では,限られた開発期間内で効率的に成果を上げるために,機能ごとに優先順位を設定し,それぞれについて計画・設計・実装・テストの工程を小刻みに繰り返す手法を採用した.
+\label{sec:org4c929a6}
+本研究では,限られた開発期間内で効率的に成果を上げるために,機能ごとに優先順位を設定し,それぞれについて計画・設計・実装・テストの工程を小刻みに繰り返す手法を採用した.＿
 各段階で得られた知見や, 研究室内のメンバーからのフィードバックをもとに, 仕様やUIの見直しを行いながら, 柔軟に改善を重ねた.
 これにより, 利用者の視点を反映した機能の追加や調整が可能となり, アプリケーションの完成度と実用性を段階的に高めることができた.
 
 \subsection{Dango}
-\label{sec:org3004adb}
+\label{sec:org18c417d}
 開発環境として,Pythonで実装されたサーバーサイドWebアプリケーションフレームワークであるDjangoを選定した[2]．Djangoを選定した理由は以下の3つである．
 
 1つ目は,ユーザー認証や管理画面,データベース操作などの機能が初期状態で組み込まれており,追加設定を行わずとも迅速に開発を開始できる点である．これにより,開発初期の環境構築にかかる手間を大幅に削減することが可能となった．
@@ -40,11 +40,11 @@
 また,実装にはPython, HTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrapを採用した．開発にあたってはCopilot[3]を参照しながら,開発を行った．
 
 \subsection{Heroku}
-\label{sec:orgb214742}
+\label{sec:orgcfce0b3}
 \chapter{結果と考察}
-\label{sec:org872216e}
+\label{sec:org445818e}
 \section{アプリ機能}
-\label{sec:org42ee23f}
+\label{sec:org320f9f6}
 今回，開発したアプリでは大きく分けて4つの機能を実装した．
 それぞれの機能は図3.1の通りである．
 \begin{figure}[htbp]
@@ -53,7 +53,7 @@
 \caption{アプリ機能一覧.}
 \end{figure}
 \subsection{旅程の視覚化管理}
-\label{sec:orga3167fe}
+\label{sec:org4da0d57}
 ユーザーが旅行の全体像や日程ごとの計画を直感的に把握できるよう,複数の視覚化機能を実装した.
 
 まず,登録された旅行期間に基づいて,各旅行を「予定」「旅行中」「終了」「未定」の4つのステータスに分類し,色分けによって一覧画面上に表示する機能を実装した.
@@ -67,44 +67,55 @@
 また,旅行詳細画面では,Google Maps API を用いて登録された観光場所を地図上に表示する機能を導入した.
 これにより,各観光地の位置関係や移動ルートを視覚的に確認でき,旅行計画全体の構造を把握しやすくなった.
 
-さらに,旅行に含まれる観光場所を「全体」「1日目」「2日目」など日程ごとに切り替えて表示する機能を実装した.
-ユーザーはタブを操作することで,旅行全体の流れを理解しつつ,各日の予定を個別に確認・編集することが可能となった.
+さらに,旅行期間を事前に入力しておくことで,旅行の日数分だけタブを動的に生成する機能を実装した.
+旅行に含まれる観光場所を「全体」「1日目」「2日目」など日程ごとに切り替えて表示する機能も併せて導入し,ユーザーはタブを操作することで,旅行全体の流れを把握しながら,各日の予定を個別に確認・編集することが可能となった.
+これにより, 日程ごとの計画を視覚的に整理しやすくなり,過不足のあるスケジュールや移動の偏りにも気づきやすくなった.
+また,編集対象の日付を明確に切り替えられることで,誤操作の防止にもつながっている.
 
 タブの切り替えに連動して,地図上に表示される観光地もその日に対応するもののみに自動で更新されるため,
-日程ごとの旅程を視覚的に管理しやすい設計となっている.
+日程ごとの旅程がより視覚的に管理しやすい設計となっている.
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=15cm]{./fig/focus_on_date.png}
-\caption{1日目のタブを押したときの画面.}
+\includegraphics[width=17cm]{./fig/focus_on_date.png}
+\caption{全体から1日目のタブを押したときの変化.}
 \end{figure}
 
 これらの機能により,ユーザーは旅行の計画段階において,旅程を効率的に把握・調整できるようになり、
 直感的な旅行プランニングが可能となった.
 
 \subsection{旅程の編集・調節機能}
-\label{sec:orgb5849d2}
+\label{sec:org1ffda8a}
 旅行の計画を柔軟に調整できるよう,旅程編集に関する2つの機能を実装した.
 
-まず,観光場所の訪問順序を自由に入れ替える機能を導入した.
-これにより,ユーザーは移動効率や希望に応じて旅程を柔軟に再構成することが可能となった.
+まず,観光場所の訪問順序をドラッグすることで自由に入れ替える機能を導入した.
+これにより,ユーザーは移動効率や興味関心に応じて旅程を柔軟に再構成できるようになった.従来のように順序を変更するたびに項目を削除し,再度追加し直す必要がなくなったことで,操作性が向上し,旅程編集の手間が大幅に軽減された.
 
 また,各観光地間の移動時間を自動で算出・表示する機能を実装した.
-これにより,ユーザーは移動にかかる時間を考慮しながら,現実的かつ無理のないスケジュールを立てることができるようになった.
+算出されるのは車での移動を想定した所要時間であり,ユーザーは移動にかかる時間を考慮しながら,現実的かつ無理のないスケジュールを立てることが可能となった.
+さらに,移動時間が可視化されたことで,訪問地の組み合わせや順序の検討がより直感的かつ効率的に行えるようになった.
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=12cm]{./fig/car.png}
+\caption{移動時間表示画面.}
+\end{figure}
 
 これらの機能は,旅行の編集・調節を支援する上で不可欠な要素であり,ユーザーが旅程全体の流れを把握しながら,日程ごとの詳細な計画を直感的に調整できる環境を提供している.
 
 
 \subsection{検索機能}
-\label{sec:orga966b8b}
-旅行情報の登録・閲覧・編集を効率的かつ直感的に行えるよう,2つの検索機能を実装した。
+\label{sec:org429f238}
+旅行情報の登録・閲覧・編集を効率的かつ直感的に行えるよう,2つの検索機能を実装した.
 
-検索機能であり,旅行一覧画面に多くの旅行が表示されている場合,目的の旅行を探し出すのに時間がかかる.
-そこで,旅行名や説明欄に含まれる単語をもとに,部分一致によるキーワード検索を行い,該当するデータを絞り込めるようにする.
-タイトルの語句をキーとして検索するキーワード検索に分けて検索機能を実装した．
+旅行一覧画面に多くの旅行が表示されている場合,目的の旅行を探し出すのに時間がかかることがある.
+そこで,旅行名や説明欄に含まれる単語をもとに部分一致によるキーワード検索を行い,該当するデータを絞り込めるようにした.
+いずれの検索においても,大文字・小文字を区別しない部分一致検索を実現しているため,ユーザーは入力時に文字の大小を意識する必要がない.
+そのため,検索漏れを防ぐことができ,よりスムーズに目的の情報へアクセスできるようになった.
+また,検索結果の件数を取得し,「○件」という形式で表示することで,検索結果の量を一目で把握できるようにした.
+
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=8cm]{./fig/search.png}
-\caption{旅行一覧検索画面.}
+\includegraphics[width=12cm]{./fig/search_results.png}
+\caption{検索結果画面.}
 \end{figure}
 
 さらに,施設名を入力するだけで,対応する位置に地図上のピンを自動で立てられる機能を導入した.
@@ -117,10 +128,12 @@
 
 
 \subsection{チェックリスト機能}
-\label{sec:org442aa06}
+\label{sec:org2367768}
 旅行準備を効率的に進められるよう,チェックリストに関する複数の機能を実装した.
 まず,旅行ごとに標準のチェックリスト設定を適用できる機能を導入した.
 これにより,ユーザーは毎回ゼロからリストを作成する必要がなく,あらかじめ用意された基本項目をもとに効率よく準備を開始できるようになった.
+さらに,基本項目をテンプレート化することで,「今回だけ書き忘れた」といった漏れを防ぐ効果も期待できる.
+
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=12cm]{./fig/checklist_setting.png}
@@ -128,21 +141,27 @@
 \end{figure}
 
 また,各旅行ごとに持ち物や準備項目を自由に編集できるチェックリスト編集機能を導入した.
-これにより,ユーザーは旅行の目的や同行者に応じて,必要な項目を柔軟に追加・削除することが可能となった.
+これにより,ユーザーは旅行の目的や季節,同行者に応じて,必要な項目を柔軟に追加・削除することが可能となった.
+状況に応じたカスタマイズが行えることで,より実際のニーズに即した準備ができるようになり,忘れ物や準備漏れの防止にもつながる.
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=10cm]{./fig/add_checklist.png}
 \caption{チェックリスト追加画面.}
 \end{figure}
 
-さらに,チェック状態の保存機能を実装し,ユーザーが確認済みの項目を記録できるようにした.
-これにより,準備の進捗状況を可視化しながら,漏れなく持ち物を確認できるようになった.
-
+さらに,各項目のチェック状況を保持する機能を実装し,ユーザーが確認済みの持ち物を記録できるようにした.
+これにより,準備の進捗状況を可視化しながら,持ち物の確認状況を一目で把握できるようになり,確認漏れや二重確認の手間を軽減することが可能となった.
+チェックの状態は旅行ごとに保存されるため,複数の旅行を並行して準備する場合でも, 各旅程の進捗を個別に管理できる.
+ \begin{figure}[htbp]
+\centering
+\includegraphics[width=10cm]{./fig/checklist_maintenance.png}
+\caption{チェックリストの管理画面.}
+\end{figure}
 これらの機能は,旅行前の準備を支援する上で重要な役割を果たしており,ユーザーが安心して出発できるよう,
 実用性と柔軟性を兼ね備えたチェックリスト管理環境を提供している.
 
 \chapter{まとめ}
-\label{sec:org5706869}
+\label{sec:orgdbdea3b}
 本研究では，Rubyで書かれたサーバー側WebアプリケーションフレームワークであるRailsを開発環境として，データを共有・見返す作業を癖付けることを目的としたグループウェアアプリ Habit man を開発した．
 
 開発手法として事前に全ての機能やサービスの詳細な要件，作業スケジュールを立てるウォーターフォール開発ではなく，
