--- a/thesis/acknowledge/acknowledge.tex
+++ b/thesis/acknowledge/acknowledge.tex
@@ -1,5 +1,5 @@
 \chapter*{謝辞}
 本研究を進めるにあたり,御指導いただきました西谷滋人教授には心から感謝いたします.
-また,実際にアプリを使用していただき,貴重な意見を下さった西谷研究室に所属している皆さまにも
-大変お世話になりました.
+また，実際にアプリを使用していただき，貴重なご意見や改善のヒントをくださった西谷研究室の皆さまにも，深く感謝いたします．
+皆さまからの率直なフィードバックが，本研究の質を高める大きな支えとなりました．
 お礼申し上げます.
