--- a/thesis/body/body.tex
+++ b/thesis/body/body.tex
@@ -1,6 +1,6 @@
 
 \chapter{序論}
-\label{sec:orgd3e54d7}
+\label{sec:org1b258aa}
 修学旅行などのイベントでは,参加者に対して事前にしおりが配布されることが多い.
 しおりは旅程の把握や所持品の確認,集合時間の共有などを目的とした重要な情報媒体であり,
 旅行の準備や当日の行動において欠かせない役割を果たしている.
@@ -16,18 +16,18 @@
 3つ目は,地図表示機能がないため,目的地の位置関係や全体像を視覚的に理解することが難しく,利用者は外部ツールや手作業で補完しなければならない.
 
 これらの課題は,旅行計画の際にユーザーにとって大きな障壁となっており,情報の整理や視覚的な理解の低下が考えられる.
-そこで本研究では,視覚的な理解と旅行後の振り返りを行える「デジタル版しおり」として機能する旅行アプリの開発を目指す.
+そこで本研究では,視覚的な理解と効率的に旅行計画を行える「デジタル版しおり」として機能する旅行アプリの開発を目指す.
 
 \chapter{手法}
-\label{sec:org56983ae}
+\label{sec:org6be705a}
 \section{開発手法}
-\label{sec:org4c929a6}
+\label{sec:org8c6aabf}
 本研究では,限られた開発期間内で効率的に成果を上げるために,機能ごとに優先順位を設定し,それぞれについて計画・設計・実装・テストの工程を小刻みに繰り返す手法を採用した.＿
 各段階で得られた知見や, 研究室内のメンバーからのフィードバックをもとに, 仕様やUIの見直しを行いながら, 柔軟に改善を重ねた.
 これにより, 利用者の視点を反映した機能の追加や調整が可能となり, アプリケーションの完成度と実用性を段階的に高めることができた.
 
 \subsection{Dango}
-\label{sec:org18c417d}
+\label{sec:orgb7df9e3}
 開発環境として,Pythonで実装されたサーバーサイドWebアプリケーションフレームワークであるDjangoを選定した[2]．Djangoを選定した理由は以下の3つである．
 
 1つ目は,ユーザー認証や管理画面,データベース操作などの機能が初期状態で組み込まれており,追加設定を行わずとも迅速に開発を開始できる点である．これにより,開発初期の環境構築にかかる手間を大幅に削減することが可能となった．
@@ -40,24 +40,37 @@
 また,実装にはPython, HTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrapを採用した．開発にあたってはCopilot[3]を参照しながら,開発を行った．
 
 \subsection{Heroku}
-\label{sec:orgcfce0b3}
+\label{sec:org11e7408}
 \chapter{結果と考察}
-\label{sec:org445818e}
+\label{sec:org21f0099}
 \section{アプリ機能}
-\label{sec:org320f9f6}
-今回，開発したアプリでは大きく分けて4つの機能を実装した．
+\label{sec:org41a24b1}
+今回，開発したアプリでは大きく分けて5つの機能を実装した．
 それぞれの機能は図3.1の通りである．
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=15cm]{./fig/app.png}
 \caption{アプリ機能一覧.}
 \end{figure}
+
+\subsection{旅行作成画面}
+\label{sec:org149ccb1}
+旅行作成画面は，本アプリケーションにおける起点となる機能であり，ユーザーが旅行の基本情報を登録するための欠かせないインターフェースである．
+この画面を通じて入力された情報は，以降のスケジュール管理や地図表示，チェックリスト生成など，他の機能と密接に連携する基盤となる．
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=12cm]{./fig/new_trip.png}
+\caption{旅行作成画面.}
+\end{figure}
+
 \subsection{旅程の視覚化管理}
-\label{sec:org4da0d57}
+\label{sec:org9af6224}
 ユーザーが旅行の全体像や日程ごとの計画を直感的に把握できるよう,複数の視覚化機能を実装した.
 
 まず,登録された旅行期間に基づいて,各旅行を「予定」「旅行中」「終了」「未定」の4つのステータスに分類し,色分けによって一覧画面上に表示する機能を実装した.
 これにより,ユーザーは「どこに行ったか」「これからどこに行くか」といった旅行の進行状況を一目で把握できるようになった.
+具体的には,「旅行中」は緑,「予定」は青,「終了」はグレー,「未定」は黄色となっている.
+さらに,色だけでなくアイコンを加えることでより視覚的にわかりやすい工夫を行った.
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=15cm]{./fig/travel.png}
@@ -67,7 +80,7 @@
 また,旅行詳細画面では,Google Maps API を用いて登録された観光場所を地図上に表示する機能を導入した.
 これにより,各観光地の位置関係や移動ルートを視覚的に確認でき,旅行計画全体の構造を把握しやすくなった.
 
-さらに,旅行期間を事前に入力しておくことで,旅行の日数分だけタブを動的に生成する機能を実装した.
+加えて,旅行期間を事前に入力しておくことで,旅行の日数分だけタブを動的に生成する機能を実装した.
 旅行に含まれる観光場所を「全体」「1日目」「2日目」など日程ごとに切り替えて表示する機能も併せて導入し,ユーザーはタブを操作することで,旅行全体の流れを把握しながら,各日の予定を個別に確認・編集することが可能となった.
 これにより, 日程ごとの計画を視覚的に整理しやすくなり,過不足のあるスケジュールや移動の偏りにも気づきやすくなった.
 また,編集対象の日付を明確に切り替えられることで,誤操作の防止にもつながっている.
@@ -84,7 +97,7 @@
 直感的な旅行プランニングが可能となった.
 
 \subsection{旅程の編集・調節機能}
-\label{sec:org1ffda8a}
+\label{sec:org7839f8d}
 旅行の計画を柔軟に調整できるよう,旅程編集に関する2つの機能を実装した.
 
 まず,観光場所の訪問順序をドラッグすることで自由に入れ替える機能を導入した.
@@ -103,7 +116,7 @@
 
 
 \subsection{検索機能}
-\label{sec:org429f238}
+\label{sec:org6fb853f}
 旅行情報の登録・閲覧・編集を効率的かつ直感的に行えるよう,2つの検索機能を実装した.
 
 旅行一覧画面に多くの旅行が表示されている場合,目的の旅行を探し出すのに時間がかかることがある.
@@ -128,7 +141,7 @@
 
 
 \subsection{チェックリスト機能}
-\label{sec:org2367768}
+\label{sec:org4ad403d}
 旅行準備を効率的に進められるよう,チェックリストに関する複数の機能を実装した.
 まず,旅行ごとに標準のチェックリスト設定を適用できる機能を導入した.
 これにより,ユーザーは毎回ゼロからリストを作成する必要がなく,あらかじめ用意された基本項目をもとに効率よく準備を開始できるようになった.
@@ -161,18 +174,15 @@
 実用性と柔軟性を兼ね備えたチェックリスト管理環境を提供している.
 
 \chapter{まとめ}
-\label{sec:orgdbdea3b}
-本研究では，Rubyで書かれたサーバー側WebアプリケーションフレームワークであるRailsを開発環境として，データを共有・見返す作業を癖付けることを目的としたグループウェアアプリ Habit man を開発した．
+\label{sec:org578669e}
 
-開発手法として事前に全ての機能やサービスの詳細な要件，作業スケジュールを立てるウォーターフォール開発ではなく，
-優先順位を付けて重要な機能やサービスを段階に分けて開発し，ユーザーから得た反応から方向性や仮説を見出し，
-ユーザーへ価値を素早く届け，実戦投入の学びから素早く改善を行うというサイクルを確立するアジャイル開発をした．
-結果として，研究室のメンバーから早い段階でフィードバックを頂けたのでより良いグループウェアアプリへと修正することができた．
-また，機能的な側面としてカレンダー表示やタグ付け機能などの複雑な実装はパッケージマネージャーであるgemに配布されているライブラリを用いて実現させた．
+本研究では，pythonで書かれたサーバー側WebアプリケーションフレームワークであるDjangoを開発環境として，
+視覚的な理解と効率的に旅行計画を行えるデジタル版しおりを開発した．
 
-日付を第1キーとしてデータを保存することによって，日付ごとのデータ管理が容易になり，データの検索が高速化した．
-加えて，データをただ単に溜めていくだけではなく，
-独自のアルゴリズムから不必要と判定されたデータをアーカイブに移動することによってデータベースやストレージの使用量を最適化できた．
+開発手法としては,機能ごとに優先順位を設定し,重要度の高いものから順に実装を進めることで,ユーザーに対して価値を早期に提供することを重視した.
+このアプローチにより,開発初期から研究室内での試用とフィードバックが可能となり,得られた意見を反映しながら,より実用性と完成度の高いグループウェアアプリへと発展させることができた.
 
-結果として，グループメンバーのデータ共有・見返す作業の習慣化に繋げることができた．
+また，機能面では地図の表示や色分け機能によって旅行全体の構成を視覚的に把握しやすくし，キーワード検索機能や地名検索機能により，目的地の絞り込みや情報の整理を効率的に行えるようにした．さらに，チェックリストや日程ごとのタブ表示，移動時間の自動算出といった機能を組み合わせることで，旅行前の準備から当日の行動管理，旅行後の振り返りまでを一貫してサポートできる設計とした．
+
+結果として，旅行計画を可視化し，ユーザーが直感的に全体像を把握できるアプリケーションを開発することができた．
 
