--- a/thesis/body/body.org
+++ b/thesis/body/body.org
@@ -21,7 +21,7 @@
 3つ目は,地図表示機能がないため,目的地の位置関係や全体像を視覚的に理解することが難しく,利用者は外部ツールや手作業で補完しなければならない.
 
 これらの課題は,旅行計画の際にユーザーにとって大きな障壁となっており,情報の整理や視覚的な理解の低下が考えられる.
-そこで本研究では,視覚的な理解と旅行後の振り返りを行える「デジタル版しおり」として機能する旅行アプリの開発を目指す.
+そこで本研究では,視覚的な理解と効率的に旅行計画を行える「デジタル版しおり」として機能する旅行アプリの開発を目指す.
 
 * 手法
 ** 開発手法
@@ -44,16 +44,26 @@
 *** Heroku
 * 結果と考察
 ** アプリ機能
-今回，開発したアプリでは大きく分けて4つの機能を実装した．
+今回，開発したアプリでは大きく分けて5つの機能を実装した．
 それぞれの機能は図3.1の通りである．
  #+CAPTION: アプリ機能一覧.
  #+attr_latex: :width 15cm
  file:./fig/app.png
+
+*** 旅行作成画面
+旅行作成画面は，本アプリケーションにおける起点となる機能であり，ユーザーが旅行の基本情報を登録するための欠かせないインターフェースである．
+この画面を通じて入力された情報は，以降のスケジュール管理や地図表示，チェックリスト生成など，他の機能と密接に連携する基盤となる．
+  #+CAPTION: 旅行作成画面.
+ #+attr_latex: :width 12cm
+ file:./fig/new_trip.png
+
 *** 旅程の視覚化管理
 ユーザーが旅行の全体像や日程ごとの計画を直感的に把握できるよう,複数の視覚化機能を実装した.
 
 まず,登録された旅行期間に基づいて,各旅行を「予定」「旅行中」「終了」「未定」の4つのステータスに分類し,色分けによって一覧画面上に表示する機能を実装した.
 これにより,ユーザーは「どこに行ったか」「これからどこに行くか」といった旅行の進行状況を一目で把握できるようになった.
+具体的には,「旅行中」は緑,「予定」は青,「終了」はグレー,「未定」は黄色となっている.
+さらに,色だけでなくアイコンを加えることでより視覚的にわかりやすい工夫を行った.
  #+CAPTION: 旅行一覧画面.
  #+attr_latex: :width 15cm
  file:./fig/travel.png
@@ -61,7 +71,7 @@
 また,旅行詳細画面では,Google Maps API を用いて登録された観光場所を地図上に表示する機能を導入した.
 これにより,各観光地の位置関係や移動ルートを視覚的に確認でき,旅行計画全体の構造を把握しやすくなった.
 
-さらに,旅行期間を事前に入力しておくことで,旅行の日数分だけタブを動的に生成する機能を実装した.
+加えて,旅行期間を事前に入力しておくことで,旅行の日数分だけタブを動的に生成する機能を実装した.
 旅行に含まれる観光場所を「全体」「1日目」「2日目」など日程ごとに切り替えて表示する機能も併せて導入し,ユーザーはタブを操作することで,旅行全体の流れを把握しながら,各日の予定を個別に確認・編集することが可能となった.
 これにより, 日程ごとの計画を視覚的に整理しやすくなり,過不足のあるスケジュールや移動の偏りにも気づきやすくなった.
 また,編集対象の日付を明確に切り替えられることで,誤操作の防止にもつながっている.
@@ -138,17 +148,13 @@
 実用性と柔軟性を兼ね備えたチェックリスト管理環境を提供している.
 
 * まとめ
-本研究では，Rubyで書かれたサーバー側WebアプリケーションフレームワークであるRailsを開発環境として，データを共有・見返す作業を癖付けることを目的としたグループウェアアプリ Habit man を開発した．
 
-開発手法として事前に全ての機能やサービスの詳細な要件，作業スケジュールを立てるウォーターフォール開発ではなく，
-優先順位を付けて重要な機能やサービスを段階に分けて開発し，ユーザーから得た反応から方向性や仮説を見出し，
-ユーザーへ価値を素早く届け，実戦投入の学びから素早く改善を行うというサイクルを確立するアジャイル開発をした．
-結果として，研究室のメンバーから早い段階でフィードバックを頂けたのでより良いグループウェアアプリへと修正することができた．
-また，機能的な側面としてカレンダー表示やタグ付け機能などの複雑な実装はパッケージマネージャーであるgemに配布されているライブラリを用いて実現させた．
+本研究では，pythonで書かれたサーバー側WebアプリケーションフレームワークであるDjangoを開発環境として，
+視覚的な理解と効率的に旅行計画を行えるデジタル版しおりを開発した．
 
-日付を第1キーとしてデータを保存することによって，日付ごとのデータ管理が容易になり，データの検索が高速化した．
-加えて，データをただ単に溜めていくだけではなく，
-独自のアルゴリズムから不必要と判定されたデータをアーカイブに移動することによってデータベースやストレージの使用量を最適化できた．
+開発手法としては,機能ごとに優先順位を設定し,重要度の高いものから順に実装を進めることで,ユーザーに対して価値を早期に提供することを重視した.
+このアプローチにより,開発初期から研究室内での試用とフィードバックが可能となり,得られた意見を反映しながら,より実用性と完成度の高いグループウェアアプリへと発展させることができた.
 
-結果として，グループメンバーのデータ共有・見返す作業の習慣化に繋げることができた．
+また，機能面では地図の表示や色分け機能によって旅行全体の構成を視覚的に把握しやすくし，キーワード検索機能や地名検索機能により，目的地の絞り込みや情報の整理を効率的に行えるようにした．さらに，チェックリストや日程ごとのタブ表示，移動時間の自動算出といった機能を組み合わせることで，旅行前の準備から当日の行動管理，旅行後の振り返りまでを一貫してサポートできる設計とした．
 
+結果として，旅行計画を可視化し，ユーザーが直感的に全体像を把握できるアプリケーションを開発することができた．
