--- a/thesis/body/body.org
+++ b/thesis/body/body.org
@@ -25,7 +25,7 @@
 
 * 手法
 ** 開発手法
-本研究では,限られた開発期間内で効率的に成果を上げるために,機能ごとに優先順位を設定し,それぞれについて計画・設計・実装・テストの工程を小刻みに繰り返す手法を採用した.＿
+本研究では,限られた開発期間内で効率的に成果を上げるために,機能ごとに優先順位を設定し,それぞれについて計画・設計・実装・テストの工程を小刻みに繰り返す手法を採用した.
 各段階で得られた知見や, 研究室内のメンバーからのフィードバックをもとに, 仕様やUIの見直しを行いながら, 柔軟に改善を重ねた.
 これにより, 利用者の視点を反映した機能の追加や調整が可能となり, アプリケーションの完成度と実用性を段階的に高めることができた.
 
@@ -49,6 +49,25 @@
  #+CAPTION: アプリ機能一覧.
  #+attr_latex: :width 15cm
  file:./fig/app.png
+
+*** アカウント機能
+本アプリケーションでは,ユーザー認証機能としてログイン機能と新規登録機能を実装した.
+
+ログイン画面では,登録済みのユーザーがユーザー名とパスワードを入力することで,個別の旅行プランやチェックリストにアクセスできるようになっている.
+ #+CAPTION: ログイン画面.
+ #+attr_latex: :width 10cm
+ file:./fig/login.png
+
+ログインに失敗した場合は,正しいユーザー名とパスワードを入力するようにメッセージが表示される.
+ #+CAPTION: ログイン失敗画面.
+ #+attr_latex: :width 10cm 
+ file:./fig/failure.png
+
+一方,まだ登録を行っていないユーザーに対しては,新規登録画面を用意しており,ユーザー名・パスワード・確認用パスワードの3項目を入力することでアカウントを作成できる仕組みとした.
+パスワードの確認入力を設けることで,入力ミスによるログイン失敗を防ぎ、ユーザー体験の向上を図っている.
+ #+CAPTION: 新規登録画面.
+ #+attr_latex: :width 10cm
+ file:./fig/registration.png
 
 *** 旅行作成画面
 旅行作成画面は，本アプリケーションにおける起点となる機能であり，ユーザーが旅行の基本情報を登録するための欠かせないインターフェースである．
@@ -121,7 +140,7 @@
  file:./fig/search_place.png
 
 
-*** チェックリスト機能
+*** [#B] チェックリスト機能
 旅行準備を効率的に進められるよう,チェックリストに関する複数の機能を実装した.
 まず,旅行ごとに標準のチェックリスト設定を適用できる機能を導入した.
 これにより,ユーザーは毎回ゼロからリストを作成する必要がなく,あらかじめ用意された基本項目をもとに効率よく準備を開始できるようになった.
