--- a/thesis/body/body.org
+++ b/thesis/body/body.org
@@ -50,7 +50,7 @@
  #+attr_latex: :width 15cm
  file:./fig/app.png
 
-*** アカウント機能
+*** [#B] アカウント機能
 本アプリケーションでは,ユーザー認証機能としてログイン機能と新規登録機能を実装した.
 
 ログイン画面では,登録済みのユーザーがユーザー名とパスワードを入力することで,個別の旅行プランやチェックリストにアクセスできるようになっている.
@@ -68,6 +68,16 @@
  #+CAPTION: 新規登録画面.
  #+attr_latex: :width 10cm
  file:./fig/registration.png
+
+#+LATEX: \newpage
+*** 共有機能
+本アプリでは,ユーザーが作成した旅行計画を他者と共有するためのリンク生成機能を実装した.
+この機能により,ユーザーはパスワード付きの専用URLを発行し,家族や友人と旅行情報を安全かつ手軽に共有できる.
+共有リンクの作成時には,ユーザーがあらかじめ用意された選択肢から有効期間を選択できるように設計しており,
+設定された期限を過ぎたリンクに対しては,システムが自動的に無効と判断し,アクセスを制限する仕組みを導入している.
+#+CAPTION: リンク作成画面.
+ #+attr_latex: :width 12cm
+ file:./fig/share.png
 
 *** 旅行作成画面
 旅行作成画面は，本アプリケーションにおける起点となる機能であり，ユーザーが旅行の基本情報を登録するための欠かせないインターフェースである．
@@ -144,7 +154,7 @@
 旅行準備を効率的に進められるよう,チェックリストに関する複数の機能を実装した.
 まず,旅行ごとに標準のチェックリスト設定を適用できる機能を導入した.
 これにより,ユーザーは毎回ゼロからリストを作成する必要がなく,あらかじめ用意された基本項目をもとに効率よく準備を開始できるようになった.
-さらに,基本項目をテンプレート化することで,「今回だけ書き忘れた」といった漏れを防ぐ効果も期待できる.
+さらに,基本項目をテンプレート化することで,今回だけ書き忘れたという漏れを防ぐ効果も期待できる.
 
  #+CAPTION: チェックリスト設定画面.
  #+attr_latex: :width 12cm
