--- a/thesis/body/body.org
+++ b/thesis/body/body.org
@@ -32,7 +32,7 @@
 *** Dango
 開発環境として,Pythonで実装されたサーバーサイドWebアプリケーションフレームワークであるDjangoを選定した[2]．Djangoを選定した理由は以下の3つである．
 
-1つ目は,ユーザー認証や管理画面,データベース操作などの機能が初期状態で組み込まれており,追加設定を行わずとも迅速に開発を開始できる点である．これにより,開発初期の環境構築にかかる手間を大幅に削減することが可能となった．
+1つ目は,ユーザー認証や管理画面,データベース操作などの機能が初期状態で組み込まれており,追加設定を行わずとも迅速に開発を開始できる点である．これにより,開発初期の環境構築にかかる時間を大幅に削減することが可能となった．
 
 2つ目は,データベース操作をすべてPythonで記述できるため,学習コストが低い点である．Djangoでは,モデルの定義からマイグレーションの実行までを一貫してPythonで記述できるため,SQLの詳細な知識がなくても複雑なデータ構造の設計や変更が容易に行える．
 
@@ -118,7 +118,7 @@
 旅行の計画を柔軟に調整できるよう,旅程編集に関する2つの機能を実装した.
 
 まず,観光場所の訪問順序をドラッグすることで自由に入れ替える機能を導入した.
-これにより,ユーザーは移動効率や興味関心に応じて旅程を柔軟に再構成できるようになった.従来のように順序を変更するたびに項目を削除し,再度追加し直す必要がなくなったことで,操作性が向上し,旅程編集の手間が大幅に軽減された.
+これにより,ユーザーは移動効率や興味関心に応じて旅程を柔軟に再構成できるようになった.従来のように順序を変更するたびに項目を削除し,再度追加し直す必要がなくなったことで,操作性が向上し,旅程編集の負担が大幅に軽減された.
 
 また,各観光地間の移動時間を自動で算出・表示する機能を実装した.
 算出されるのは車での移動を想定した所要時間であり,ユーザーは移動にかかる時間を考慮しながら,現実的かつ無理のないスケジュールを立てることが可能となった.
@@ -144,7 +144,7 @@
  file:./fig/search_results.png
 
 さらに,施設名を入力するだけで,対応する位置に地図上のピンを自動で立てられる機能を導入した.
-これにより,ユーザーは住所を調べて緯度経度を入力する手間なく,直感的に観光地を登録できるようになった.
+これにより,ユーザーは住所を調べて緯度経度を入力する必要がなく,直感的に観光地を登録できるようになった.
  #+CAPTION: 施設名の入力画面.
  #+attr_latex: :width 12cm
  file:./fig/search_place.png
@@ -168,7 +168,7 @@
  file:./fig/add_checklist.png
 
 さらに,各項目のチェック状況を保持する機能を実装し,ユーザーが確認済みの持ち物を記録できるようにした.
-これにより,準備の進捗状況を可視化しながら,持ち物の確認状況を一目で把握できるようになり,確認漏れや二重確認の手間を軽減することが可能となった.
+これにより,準備の進捗状況を可視化しながら,持ち物の確認状況を一目で把握できるようになり,確認漏れや二重確認の負担を軽減することが可能となった.
 チェックの状態は旅行ごとに保存されるため,複数の旅行を並行して準備する場合でも, 各旅程の進捗を個別に管理できる.
 #+CAPTION: チェックリストの管理画面.
  #+attr_latex: :width 10cm
