--- a/thesis/body/body.tex
+++ b/thesis/body/body.tex
@@ -1,6 +1,6 @@
 
 \chapter{序論}
-\label{sec:org9846a3e}
+\label{sec:org4d07310}
 修学旅行などのイベントでは,参加者に対して事前にしおりが配布されることが多い.
 しおりは旅程の把握や所持品の確認,集合時間の共有などを目的とした重要な情報媒体であり,
 旅行の準備や当日の行動において欠かせない役割を果たしている.
@@ -19,18 +19,18 @@
 そこで本研究では,視覚的な理解と効率的に旅行計画を行える「デジタル版しおり」として機能する旅行アプリの開発を目指す.
 
 \chapter{手法}
-\label{sec:org08e55c9}
+\label{sec:org5949ec9}
 \section{開発手法}
-\label{sec:orgb389769}
+\label{sec:orga3fea02}
 本研究では,限られた開発期間内で効率的に成果を上げるために,機能ごとに優先順位を設定し,それぞれについて計画・設計・実装・テストの工程を小刻みに繰り返す手法を採用した.
 各段階で得られた知見や, 研究室内のメンバーからのフィードバックをもとに, 仕様やUIの見直しを行いながら, 柔軟に改善を重ねた.
 これにより, 利用者の視点を反映した機能の追加や調整が可能となり, アプリケーションの完成度と実用性を段階的に高めることができた.
 
 \subsection{Dango}
-\label{sec:orgb80190c}
+\label{sec:org463d294}
 開発環境として,Pythonで実装されたサーバーサイドWebアプリケーションフレームワークであるDjangoを選定した[2]．Djangoを選定した理由は以下の3つである．
 
-1つ目は,ユーザー認証や管理画面,データベース操作などの機能が初期状態で組み込まれており,追加設定を行わずとも迅速に開発を開始できる点である．これにより,開発初期の環境構築にかかる手間を大幅に削減することが可能となった．
+1つ目は,ユーザー認証や管理画面,データベース操作などの機能が初期状態で組み込まれており,追加設定を行わずとも迅速に開発を開始できる点である．これにより,開発初期の環境構築にかかる時間を大幅に削減することが可能となった．
 
 2つ目は,データベース操作をすべてPythonで記述できるため,学習コストが低い点である．Djangoでは,モデルの定義からマイグレーションの実行までを一貫してPythonで記述できるため,SQLの詳細な知識がなくても複雑なデータ構造の設計や変更が容易に行える．
 
@@ -40,11 +40,11 @@
 また,実装にはPython, HTML, JavaScript, CSSを使用し,UIライブラリとしてはBootstrapを採用した．開発にあたってはCopilot[3]を参照しながら,開発を行った．
 
 \subsection{Heroku}
-\label{sec:orgdd7cc19}
+\label{sec:org28f16d2}
 \chapter{結果と考察}
-\label{sec:org0aacf00}
+\label{sec:org4174700}
 \section{アプリ機能}
-\label{sec:orga096211}
+\label{sec:orge0873ff}
 今回，開発したアプリでは大きく分けて5つの機能を実装した．
 それぞれの機能は図3.1の通りである．
 \begin{figure}[htbp]
@@ -54,7 +54,7 @@
 \end{figure}
 
 \subsection{アカウント機能}
-\label{sec:org479b70d}
+\label{sec:org8944916}
 本アプリケーションでは,ユーザー認証機能としてログイン機能と新規登録機能を実装した.
 
 ログイン画面では,登録済みのユーザーがユーザー名とパスワードを入力することで,個別の旅行プランやチェックリストにアクセスできるようになっている.
@@ -81,7 +81,7 @@
 
 \newpage
 \subsection{共有機能}
-\label{sec:orgebada29}
+\label{sec:org796c741}
 本アプリでは,ユーザーが作成した旅行計画を他者と共有するためのリンク生成機能を実装した.
 この機能により,ユーザーはパスワード付きの専用URLを発行し,家族や友人と旅行情報を安全かつ手軽に共有できる.
 共有リンクの作成時には,ユーザーがあらかじめ用意された選択肢から有効期間を選択できるように設計しており,
@@ -93,7 +93,7 @@
 \end{figure}
 
 \subsection{旅行作成画面}
-\label{sec:orgf6dde37}
+\label{sec:orgbe1b89b}
 旅行作成画面は，本アプリケーションにおける起点となる機能であり，ユーザーが旅行の基本情報を登録するための欠かせないインターフェースである．
 この画面を通じて入力された情報は，以降のスケジュール管理や地図表示，チェックリスト生成など，他の機能と密接に連携する基盤となる．
 \begin{figure}[htbp]
@@ -103,7 +103,7 @@
 \end{figure}
 
 \subsection{旅程の視覚化管理}
-\label{sec:org5e9606f}
+\label{sec:org56495a7}
 ユーザーが旅行の全体像や日程ごとの計画を直感的に把握できるよう,複数の視覚化機能を実装した.
 
 まず,登録された旅行期間に基づいて,各旅行を「予定」「旅行中」「終了」「未定」の4つのステータスに分類し,色分けによって一覧画面上に表示する機能を実装した.
@@ -136,11 +136,11 @@
 直感的な旅行プランニングが可能となった.
 
 \subsection{旅程の編集・調節機能}
-\label{sec:orge3c9a21}
+\label{sec:orgb890346}
 旅行の計画を柔軟に調整できるよう,旅程編集に関する2つの機能を実装した.
 
 まず,観光場所の訪問順序をドラッグすることで自由に入れ替える機能を導入した.
-これにより,ユーザーは移動効率や興味関心に応じて旅程を柔軟に再構成できるようになった.従来のように順序を変更するたびに項目を削除し,再度追加し直す必要がなくなったことで,操作性が向上し,旅程編集の手間が大幅に軽減された.
+これにより,ユーザーは移動効率や興味関心に応じて旅程を柔軟に再構成できるようになった.従来のように順序を変更するたびに項目を削除し,再度追加し直す必要がなくなったことで,操作性が向上し,旅程編集の負担が大幅に軽減された.
 
 また,各観光地間の移動時間を自動で算出・表示する機能を実装した.
 算出されるのは車での移動を想定した所要時間であり,ユーザーは移動にかかる時間を考慮しながら,現実的かつ無理のないスケジュールを立てることが可能となった.
@@ -155,7 +155,7 @@
 
 
 \subsection{検索機能}
-\label{sec:orgd377b59}
+\label{sec:orgc908f26}
 旅行情報の登録・閲覧・編集を効率的かつ直感的に行えるよう,2つの検索機能を実装した.
 
 旅行一覧画面に多くの旅行が表示されている場合,目的の旅行を探し出すのに時間がかかることがある.
@@ -171,7 +171,7 @@
 \end{figure}
 
 さらに,施設名を入力するだけで,対応する位置に地図上のピンを自動で立てられる機能を導入した.
-これにより,ユーザーは住所を調べて緯度経度を入力する手間なく,直感的に観光地を登録できるようになった.
+これにより,ユーザーは住所を調べて緯度経度を入力する必要がなく,直感的に観光地を登録できるようになった.
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=12cm]{./fig/search_place.png}
@@ -180,7 +180,7 @@
 
 
 \subsection{チェックリスト機能}
-\label{sec:org76b5531}
+\label{sec:orgb9cbc0b}
 旅行準備を効率的に進められるよう,チェックリストに関する複数の機能を実装した.
 まず,旅行ごとに標準のチェックリスト設定を適用できる機能を導入した.
 これにより,ユーザーは毎回ゼロからリストを作成する必要がなく,あらかじめ用意された基本項目をもとに効率よく準備を開始できるようになった.
@@ -202,7 +202,7 @@
 \end{figure}
 
 さらに,各項目のチェック状況を保持する機能を実装し,ユーザーが確認済みの持ち物を記録できるようにした.
-これにより,準備の進捗状況を可視化しながら,持ち物の確認状況を一目で把握できるようになり,確認漏れや二重確認の手間を軽減することが可能となった.
+これにより,準備の進捗状況を可視化しながら,持ち物の確認状況を一目で把握できるようになり,確認漏れや二重確認の負担を軽減することが可能となった.
 チェックの状態は旅行ごとに保存されるため,複数の旅行を並行して準備する場合でも, 各旅程の進捗を個別に管理できる.
  \begin{figure}[htbp]
 \centering
@@ -213,7 +213,7 @@
 実用性と柔軟性を兼ね備えたチェックリスト管理環境を提供している.
 
 \chapter{まとめ}
-\label{sec:org2862748}
+\label{sec:org26991fe}
 
 本研究では，pythonで書かれたサーバー側WebアプリケーションフレームワークであるDjangoを開発環境として，
 視覚的な理解と効率的に旅行計画を行えるデジタル版しおりを開発した．
