--- a/thesis/body/body.org
+++ b/thesis/body/body.org
@@ -184,6 +184,6 @@
 開発手法としては,機能ごとに優先順位を設定し,重要度の高いものから順に実装を進めることで,ユーザーに対して価値を早期に提供することを重視した.
 このアプローチにより,開発初期から研究室内での試用とフィードバックが可能となり,得られた意見を反映しながら,より実用性と完成度の高いグループウェアアプリへと発展させることができた.
 
-また，機能面では地図の表示や色分け機能によって旅行全体の構成を視覚的に把握しやすくし，キーワード検索機能や地名検索機能により，目的地の絞り込みや情報の整理を効率的に行えるようにした．さらに，チェックリストや日程ごとのタブ表示，移動時間の自動算出といった機能を組み合わせることで，旅行前の準備から当日の行動管理，旅行後の振り返りまでを一貫してサポートできる設計とした．
+機能面では地図の表示や色分け機能によって旅行全体の構成を視覚的に把握しやすくし，キーワード検索機能や地名検索機能により，目的地の絞り込みや情報の整理を効率的に行えるようにした．また,Django の認証機能を活用してログイン機能を実装し,ユーザーごとの情報管理やアクセス制御を可能にした.さらに，チェックリストや日程ごとのタブ表示，移動時間の自動算出といった機能を組み合わせることで，旅行前の準備から当日の行動管理，旅行後の振り返りまでを一貫してサポートできる設計とした．
 
 結果として，旅行計画を可視化し，ユーザーが直感的に全体像を把握できるアプリケーションを開発することができた．
